--- a/src/app/pages/noteslist/noteslist.component.html
+++ b/src/app/pages/noteslist/noteslist.component.html
@@ -6,7 +6,7 @@
           #filterInput
           class="input"
           type="text"
-          (keyup)="filter($event.target.value)"
+          (keyup)="filter($event)"
           placeholder="Filter"
         />
         <span class="icon is-small is-left">
